# internal/api/http/handler/server.go
@@ -51,13 +51,13 @@ func NewServer(
 
 	r.Route("/api", func(r chi.Router) {
 		r.Route("/v1", func(r chi.Router) {
+			r.Use(mw.Auth(visualizer))
+
 			r.Route("/permissions", func(r chi.Router) {
 				r.Get("/", srv.getPermissions)
 			})
 
 			r.Route("/graphs", func(r chi.Router) {
-				r.Use(mw.Auth(visualizer))
-
 				r.Get("/", srv.getGraph)
 			})
 		})
